jaxb parser added. Module DataFormat separated